--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,13 +16,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".Friends_Activity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.yuanchuang.yohey.Friends_Activity">
+            
         </activity>
     </application>
 
