--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity android:name="com.yuanchuang.yohey.MainActivity" >
         </activity>
+        <activity android:name="com.yuanchuang.yohey.DynamicActivity"></activity>
     </application>
 
 </manifest>
