--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,20 +19,28 @@
             android:name=".Friends_Activity"
             android:label="@string/app_name" >
         </activity>
-        <activity android:name="com.yuanchuang.yohey.IntegralExchangeCommodityActivity" >
+        <activity android:name="com.yuanchuang.yohey.LoginAndRegistered" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.yuanchuang.yohey.InputMobilePhoneNumber" >
+        <activity android:name="com.yuanchuang.yohey.InputMobilePhoneNumber">
         </activity>
         <activity android:name="com.yuanchuang.yohey.SecurityVerification" >
         </activity>
         <activity android:name="com.yuanchuang.yohey.MainActivity" >
         </activity>
         <activity android:name="com.yuanchuang.yohey.DynamicActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.MyIntegralActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.IntegralExchangeCommodityActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.PurchaseCommodityActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.ReceiveGiftActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.RecommendActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.SendGiftActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.ShareItActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.IntegralStoreActivity"></activity>
     </application>
 
 </manifest>
