--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,19 +20,20 @@
             android:label="@string/app_name" >
         </activity>
         <activity android:name="com.yuanchuang.yohey.IntegralExchangeCommodityActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name="com.yuanchuang.yohey.InputMobilePhoneNumber" >
         </activity>
         <activity android:name="com.yuanchuang.yohey.SecurityVerification" >
         </activity>
         <activity android:name="com.yuanchuang.yohey.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name="com.yuanchuang.yohey.DynamicActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.RecommendActivity" >
+        </activity>
     </application>
 
 </manifest>
