--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,20 @@
         </activity>
         <activity android:name="com.yuanchuang.yohey.RecommendActivity" >
         </activity>
+        <activity android:name="com.yuanchuang.yohey.PersonalPostActivity" >
+        </activity>
+        <activity android:name="com.yuanchuang.yohey.PostingInterfaceActivity" >
+        </activity>
+        <activity android:name="com.yuanchuang.yohey.AddFriendsActivity" >
+        </activity>
+        <activity android:name="com.yuanchuang.yohey.AddMessagesAvtivity" >
+        </activity>
+        <activity android:name="com.yuanchuang.yohey.MyPostsActivity" >
+        </activity>
+        <activity android:name="com.yuanchuang.yohey.PostedMessagesActivity" >
+        </activity>
+        <activity android:name="com.yuanchuang.yohey.ParticipationPostsActivity" >
+        </activity>
     </application>
 
 </manifest>
