--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
     <application
         android:allowBackup="true"
+        android:name="com.yuanchuang.yohey.app.YoheyApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -32,7 +33,8 @@
         </activity>
         <activity android:name="com.yuanchuang.yohey.SecurityVerification" >
         </activity>
-        <activity android:name="com.yuanchuang.yohey.MainActivity" >
+        <activity android:name="com.yuanchuang.yohey.MainActivity" 
+            android:launchMode="singleTask"> 
         </activity>
         <activity android:name="com.yuanchuang.yohey.RecommendActivity" >
         </activity>
