--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:name="com.yuanchuang.yohey.app.YoheyApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".Friends_Activity"
             android:label="@string/app_name" >
@@ -87,6 +87,8 @@ r>
         </activity>
         <activity android:name="com.yuanchuang.yohey.FriendMaterialActivity" >
         </activity>
+        <activity android:name="com.yuanchuang.yohey.VerificationCodeActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.QQRegisterActivity"></activity>
     </application>
 
 </manifest>
