好友界面，视频播放界面

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -118,6 +118,7 @@
         </activity>
         <activity android:name="com.yuanchuang.yohey.QQRegisterActivity" >
         </activity>
+        <activity android:name="com.yuanchuang.yohey.Vide0CollectionActivity"></activity>
     </application>
 
 </manifest>
