--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
         android:name="com.yuanchuang.yohey.app.YoheyApplication"
@@ -116,7 +119,8 @@
         </activity>
         <activity android:name="com.yuanchuang.yohey.QQRegisterActivity" >
         </activity>
-        <activity android:name="com.yuanchuang.yohey.Vide0CollectionActivity"></activity>
+        <activity android:name="com.yuanchuang.yohey.Vide0CollectionActivity" >
+        </activity>
     </application>
 
 </manifest>
