动态页面的转发与分享跳转

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -98,6 +98,9 @@
         </activity>
         <activity android:name="com.yuanchuang.yohey.WelcomeActivity" >
         </activity>
+        <activity android:name="com.yuanchuang.yohey.CommentDynamicActivity" >
+        </activity>
+
         <!-- QQ第三方登陆所需注册页面 -->
         <activity
             android:name="com.tencent.tauth.AuthActivity"
