--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -106,7 +106,8 @@
         </activity>
         <activity android:name="com.yuanchuang.yohey.WhoReminderActivity" >
         </activity>
-
+        <activity android:name="com.yuanchuang.yohey.LocateActivity" >
+        </activity>
         <!-- QQ第三方登陆所需注册页面 -->
         <activity
             android:name="com.tencent.tauth.AuthActivity"
